syntax = "proto3";

package service;

service Robot {
  rpc PressKey (stream Key) returns(stream Response) {}
  rpc MoveMouse (stream MouseCoords) returns(stream Response) {}
}

// The requests the bundle by ID
message Key {
  uint32 id = 1;
}

message MouseCoords {
  int32 x = 1;
  int32 y = 2;
}

message Response {
  bool received = 1;
}